--- a/zigmod.yml
+++ b/zigmod.yml
@@ -3,3 +3,4 @@ name: rmw
 license: MulanPubL-2.0
 description: rmw
 root_dependencies:
+  - src: git https://github.com/LewisGaul/zig-nestedtext.git
